# algorithms

./: .gitignore  links.txt  screen.txt
algo/: fropentest.cpp  notesforFASTIO.txt  output.txt  template.cpp
algo/backtracking/: bomb.cpp  bomb_input.txt  minisuduko.cpp  minisuduko.txt  permutateString.cpp
algo/bits/: bitSwap.cpp  countOnes.cpp  printBinary.cpp  printDecimal.cpp
algo/cartesian/: overlap_rect.cpp
algo/dailybyte/: ispalindrome.cpp  reversestr.cpp
algo/data_structure/: circular_array.cpp  queue.cpp
algo/dp/: fb.cpp  triple_steps.cpp
algo/graph/: Adjacency-Matrix.cpp  Adjacency-Matrix.h  README  TODOs  a.out  graph.h  main.cpp
algo/heap/: HeapDS.cpp  build-heap.cpp  heap_delete.cpp  input.txt  insert_min_heap.cpp
algo/leetcode/: 3sum.cpp  3sumclosest.cpp  4sum.cpp  containsduplicate2.cpp
algo/linkedlist/: binary_search.cpp  cloneDups.cpp  deleteDups.cpp  deleteDups_input.txt  deleteDupsinUnsorted.cpp  deleteDupsinUnsorted.txt  findloop.cpp  getmiddle.cpp  mergesort.cpp  partialreverse.cpp  printreverse.cpp  randomListCopy.cpp  randomNodesCopy.cpp  swapKthNodes.cpp
algo/matrix/: CMakeLists.txt  a.out  area_input.txt  bfs_matrix.txt  bfs_matrix_show.cpp  bfs_traversel.cpp  circle_rect.cpp  flip_columns.cpp  flip_input.txt  infected_area.cpp  infected_area2.cpp  infected_area2.txt  input.txt  ladder.cpp  ladder_input.txt  matrix.cpp  matrix_bfs.txt  maze.cpp  maze2.cpp  queue.cpp  sum_input.txt  sum_matrix.cpp  tags  tetris.cpp  tetris_input.txt
algo/median/: kthunion.cpp  kthunion2.cpp  kthuniontemplate.cpp
algo/numbertheory/: 1.cpp  bigAddition.cpp  bigMultiply.cpp  input_addition.txt  input_bigmulti.txt
algo/persistentDS/: persistent_list.cpp  persistent_stack.cpp  persistent_tree.cpp
algo/placementnew/: memtest.cpp  smallmempool.cpp
algo/plane_sweep/: README  naive-algos.cpp
algo/recursionbasics/: CMakeLists.txt  bubblesort.cpp  nthpower.cpp  printarraysum.cpp  printintsrange.cpp  table_n.cpp  towerofhanoi.cpp
algo/searching/: BinarySearchTemplate.h  main.cpp
algo/string/: brackets_check.cpp  permutecheck.cpp  reverse.cpp
algo/suffix_array/: LCPArray.h  Substringfind.cpp  SuffixArray.h  commonSubstringProblem.cpp  longestSubProblem.cpp  main.cpp  main_3str.cpp  main_multiple.cpp  searchUsingSuffix.cpp
algo/time_measurement/: clock.cpp
algo/tree/: CalculateHD.cpp  CorrectBST.cpp  CppTree.h  DrawTree.cpp  IsMirror.cpp  Tree.h  TreeList.c  a.out  c_tree.h  completeTree.cpp  countandheight.cpp  displayPath.cpp  main.cpp  mergeTwoBST.cpp  modern_tree.cpp  printLeaves.cpp  storeTraversal.cpp  sumTreespecial.cpp
algo/trie/: meson.build  testmem.cpp  trie.cpp  trie_c.cpp  trie_c_mempool.cpp  trie_numbers.cpp
baby/: baby_weight.txt  command.txt
config/initializers/: cookie_verification_secret.rb  session_store.rb
headfirstdp/adapter/: main.cpp
headfirstdp/builder/: chained.cpp
headfirstdp/memento/: memento.cpp  memento2.cpp
headfirstdp/policy-template/: composition.cpp  composition2.cpp  inheritance.cpp
headfirstdp/signal-slot/: TODO.txt  main.cpp  property.h  property_main.cpp  signal.h
lang/asio/basic/: CMakeLists.txt  keep_alive.cpp  keep_alive2.cpp
lang/asio/daytime/: CMakeLists.txt  daytime_client.cpp  daytime_server.cpp  resolver.cpp  resolver_udp.cpp
lang/asio/timer_async/: CMakeLists.txt  basic.cpp  class_timer.cpp  sync.cpp  timer.cpp
lang/asm/: README.txt  (+3 more)
lang/cpp/asio/echo_udp/: CMakeLists.txt  async_echo.cpp  async_udp_echo_server.cpp  basic.cpp  client.cpp
linux/dbus/sdbus-cpp/calc_async/: CMakeLists.txt  client.cpp  client.h  db.xml  server.h
linux/dbus/sdbus-cpp/dbus-property/: CMakeLists.txt  README.txt  client.cpp  client2.cpp  client3.cpp  client4.cpp  server.cpp
linux/dbus/sdbus-cpp/getcpuid/: CMakeLists.txt  busctl-command.sh  client-intf.h  client.cpp  client.h  client2.cpp  cpu-intf.h  cpu-server-intf.h  cpu-server.h  cpu.xml  dbus-send-command.sh  introspect.sh  org.cpu.getid.conf  server-intf.h  server.cpp
linux/dbus/sdbus-cpp/xml/: CMakeLists.txt  client.cpp  client.h  db.xml  org.sdbuscpp.Concatenator.conf  server-intf.h  server.cpp  server.h
memcheck/: Makefile  README.md  test.c
telegram-bot/: README.md
tricks/: generate_revert_patch_from_patch.txt
vim/: vimrc
(+736 files in other folders)
